Added missing Wiki link

--- a/README.textile
+++ b/README.textile
@@ -1,6 +1,6 @@
 h2. Deploying Magento
 
-Check the Wiki for detailed installation instructions.
+Check the "Wiki":http://github.com/capistrano/capistrano/wiki for detailed installation instructions.
 
 h2. Deploying Drupal example
 
