--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,6 +1,7 @@
 == 1.0.0
 * Added the drupal:htaccess task for copying distributed .htaccess files
 * Added example Drupal Capfile and staging/production deployment files
+* Version bump to 1.0
 
 == 0.0.20
 
