--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,3 +1,6 @@
+== 1.1.7
+* Updated naming convention for Magento configuration files
+
 == 1.1.6
 * Bug Fix: removed "config" from ignore statement to prevent legit Magento files from being ignored
 
