changed the Deploying WordPress section to reference the Wiki for instructions

--- a/README.textile
+++ b/README.textile
@@ -236,94 +236,6 @@ h3. config/deploy/production.rb
   </code>
 </pre>
 
-h2. WordPress example
+h2. Deploying WordPress
 
-h3. Capfile
-
-<pre>
-  <code>
-    # Capfile
-    load 'deploy' if respond_to?(:namespace) # cap2 differentiator
-
-    # --------------------------------------------
-    # :application HAS TO BE DEFINED BEFORE
-    # REQUIRING 'ash/wordpress' LIBRARY
-    # --------------------------------------------
-    set :application, "WP_EXAMPLE.com"
-
-    # --------------------------------------------
-    # Define required Gems/libraries
-    # --------------------------------------------
-    require 'ash/wordpress'
-
-    # --------------------------------------------
-    # Setting defaults
-    # --------------------------------------------
-    # IP-address or host's servername
-    role :app, "wpexample.com"
-    role :web, "wpexample.com"
-    role :db,  "wpexample.com", :primary => true
-
-    # VCS information.
-    set :repository, "https://svn.example.com/REPO/trunk"
-    set :scm_username, "SVN_USER"
-    set :scm_password, proc{Capistrano::CLI.password_prompt("Subversion password for '#{scm_username}':")}
-
-    # SSH login credentials
-    set :user, "SSH_USER"
-    set :password, proc{Capistrano::CLI.password_prompt("SSH password for '#{user}':")}
-
-    # Deploy to file path
-    set(:deploy_to)  { "/home/CLIENT_CODE/#{application}/#{stage}" }
-
-    # Database credentials
-    set :dbuser, "DB_USER"
-
-    # Set Excluded directories/files (relative to the application's root path)
-    set(:backup_exclude) { [ "wp-content/cache" ] }
-
-    # --------------------------------------------
-    # Application Specific Methods
-    # --------------------------------------------
-    namespace :app do
-      desc "Removes any additional unnecessary files or directories after deploy:finalize_update"
-      task :finalize_update, :except => { :no_release => true } do
-        logger.debug "Removing additional files"
-        run "rm -Rf #{latest_release}/htaccess.dist"
-      end
-    end
-
-    # --------------------------------------------
-    # Callbacks
-    # --------------------------------------------
-    before "deploy:update_code", "deploy:setup_backup"
-    after "deploy:setup_backup", "backup"
-    after "deploy:finalize_update", "app:finalize_update"  
-  </code>
-</pre>
-
-h3. config/deploy/staging.rb
-
-<pre>
-  <code>
-    # config/deploy/staging.rb
-    # Database Name
-    set :dbname, "DB_NAME"
-
-    # Backups Path (/home/CLIENT_CODE/#{application}/staging/backups)
-    set :backups_path,  "#{deploy_to}/backups"
-  </code>
-</pre>
-
-h3. config/deploy/production.rb
-
-<pre>
-  <code>
-    # config/deploy/production.rb
-    # Database Name
-    set :dbname, "DB_NAME"
-
-    # Backups Path (/home/CLIENT_CODE/#{application}/production/backups)
-    set :backups_path,  "#{deploy_to}/backups"
-  </code>
-</pre>
+Check the "Wiki":https://github.com/augustash/capistrano-ash/wiki for detailed installation instructions.
