Moved the Drupal examples to the WIKI

--- a/README.textile
+++ b/README.textile
@@ -39,95 +39,9 @@ The capistrano/ash/drupal library takes a hash of Drupal multisites in the follo
 
 where each key is a folder in your @sites@ directory and each value is the URL of the multisite. If you are not using multisites, just exclude the @:multisites@ variable definition.
 
-
-h3. Capfile
-
-<pre>
-  <code>
-    # Capfile
-    load 'deploy' if respond_to?(:namespace) # cap2 differentiator
-
-    # --------------------------------------------
-    # :application HAS TO BE DEFINED BEFORE
-    # REQUIRING 'ash/drupal' LIBRARY
-    # --------------------------------------------
-    set :application, "bestappever.com"
-    set :stages, %w(staging production)
-
-    # --------------------------------------------
-    # Define required Gems/libraries
-    # --------------------------------------------
-    require 'ash/drupal'
-
-    # --------------------------------------------
-    # Setting defaults
-    # --------------------------------------------
-    # IP-address or host's servername
-    role :app, "bestappever.com"
-    role :web, "bestappever.com"
-    role :db,  "bestappever.com", :primary => true
-
-    # VCS information.
-    set :repository, "https://svn.example.com/REPO/trunk"
-    set :scm_username, "SVN_USER"
-    set :scm_password, proc{Capistrano::CLI.password_prompt("Subversion password for '#{scm_username}':")}
-
-    # SSH login credentials
-    set :user, "SSH_USER"
-    set :password, proc{Capistrano::CLI.password_prompt("SSH password for '#{user}':")}
-    
-    # Deploy to file path
-    set(:deploy_to)  { "/var/www/#{application}/#{stage}" }
-
-    # Database credentials
-    set :dbuser, "DB_USER_NAME"
-
-    # Define which files or directories you want to exclude from being backed up
-    set(:backup_exclude) { [ "var/" ] }
-    
-
-    # --------------------------------------------
-    # Drupal Multi-Sites
-    # --------------------------------------------
-    # Setting which folder in the sites directory to use
-    set :multisites, { 
-      'bestapp' => 'bestappever.com', 
-    }
-
-
-    # --------------------------------------------
-    # Callbacks - Set Before/After Precedence
-    # --------------------------------------------
-    before "deploy:update_code", "deploy:setup_backup"
-    after "deploy:setup_backup", "backup"
-  </code>
-</pre>
-
-h3. config/deploy/staging.rb
-
-<pre>
-  <code>
-    # config/deploy/staging.rb
-    # Database Name
-    set :dbname, "DB_NAME"
-
-    # Backups Path (/var/www/#{application}/staging/backups)
-    set :backups_path,  "#{deploy_to}/backups"
-  </code>
-</pre>
-
-h3. config/deploy/production.rb
-
-<pre>
-  <code>
-    # config/deploy/production.rb
-    # Database Name
-    set :dbname, "DB_NAME"
-
-    # Backups Path (/var/www/#{application}/production/backups)
-    set :backups_path,  "#{deploy_to}/backups"
-  </code>
-</pre>
+Check the "Wiki":https://github.com/augustash/capistrano-ash/wiki for detailed configuration instructions.
+"Drupal on virtual or dedicated servers":https://github.com/augustash/capistrano-ash/wiki/Drupal-Private-Server-Example
+"Drupal on shared hosting":https://github.com/augustash/capistrano-ash/wiki/Drupal-Shared-Hosting-Example
 
 
 h2. Deploying Zend or Zend/Doctrine example
