--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,3 +1,7 @@
+== 1.1.13
+* FIXED: syntax error in lib/ash/drupal.rb
+* cleaned up some mis-indented lines in lib/ash/drupal.rb
+
 == 1.1.12
 * Applied dficker's proposed patch for issue #11
 * Added the `remote_dir_exists?` method to the `lib/ash/common.rb` 
