--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,3 +1,7 @@
+== 1.3.1
+* Added additional variable (:skip_compass_compile) to skip the compilation and just upload stylesheets (useful for our upcoming Wraith theme)
+* Namespaced the commands within `compass:defualt` to avoid any future conflicts
+
 == 1.3.0
 * Version bump! - Adds tasks for compiling Sass/compass stylesheets and make it part of the deployment task chain. Although it's part of the task chain, it will only be ran if the `:compass_watched_dirs` is defined
 
